# delphi-compiler-mcp

./: .cursorrules  BUILD_INTEGRATION.md  LICENSE  README.md  build_project.py  install_mcp_server.bat  mcp_config.json  pyproject.toml  send_to_cursor_chat.py  setup.py  simple_mcp_build.py  uninstall_mcp_server.bat
delphi-mcp-debugger/: README.md  pyproject.toml
delphi-mcp-debugger/docs/: ARCHITECTURE.md  PLUGIN.md  PROTOCOLS.md  SERVER.md  SETUP_TROUBLESHOOTING.md
delphi-mcp-debugger/rad_plugin/: DelphiMcpDebugger.dpk  DelphiMcpDebugger.dproj  DelphiMcpDebuggerR.dpk  DelphiMcpDebuggerR.dproj  README.md  uJsonRpcServer.pas  uMcpDebuggerWizard.pas
delphi-mcp-debugger/src/delphi_mcp_debugger/: __init__.py  main.py  server.py
delphi-mcp-debugger/src/mock_rad_plugin/: server.py
scripts/: README.md  mcp_build_client.py  send_to_cursor_chat.py
src/delphi_compiler_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/delphi_mcp_server/: __init__.py  server.py
