[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delphi-mcp-debugger"
version = "0.1.0"
description = "MCP server exposing RAD Studio debugging controls via OTAPI plugin bridge"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "yourname"}
]
requires-python = ">=3.9"
dependencies = [
  "mcp>=1.0.0",
  "fastmcp>=0.1.0",
]

[project.scripts]
delphi-mcp-debugger = "delphi_mcp_debugger.main:main"

[tool.setuptools.packages.find]
where = ["src"]

